--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@google-cloud/translate": "^1.1.0",
     "@material-ui/core": "^1.4.0",
     "axios": "^0.18.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "config": "^1.25.1",
     "express": "^4.14.1",
     "express-graphql": "^0.6.3",
@@ -35,6 +36,7 @@
     "grid-styled": "^5.0.2",
     "jsonwebtoken": "^7.2.1",
     "material-ui": "^0.16.7",
+    "mobx": "^5.0.3",
     "mongoose": "^4.8.1",
     "morgan": "^1.8.0",
     "normalize.css": "^6.0.0",
@@ -48,16 +50,21 @@
     "react-tap-event-plugin": "^2.0.1",
     "socket.io": "^1.7.3",
     "socket.io-client": "^1.7.3",
-    "styled-components": "^3.3.3"
+    "styled-components": "^3.3.3",
+    "superagent": "^3.8.3"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-module-resolver": "^2.7.0",
     "babel-plugin-transform-class-properties": "^6.22.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.22.0",
     "body-parser": "^1.18.3",
     "css-loader": "^0.26.1",
