--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "material-ui": "^0.16.7",
     "mobx": "^5.0.3",
     "mongoose": "^4.8.1",
+    "mongoose-findorcreate": "^3.0.0",
     "morgan": "^1.8.0",
     "normalize.css": "^6.0.0",
     "passport": "^0.3.2",
